feat: rm settings page
